RESOLVED FIXED207601
Fix highlight text decorations to work with all decoration types and colors
https://bugs.webkit.org/show_bug.cgi?id=207601
Summary Fix highlight text decorations to work with all decoration types and colors
Megan Gardner
Reported 2020-02-11 16:46:55 PST
Fix highlight text decorations to work with all decoration types and colors
Attachments
Patch (11.73 KB, patch)
2020-02-11 16:56 PST, Megan Gardner
no flags
Patch for landing (11.67 KB, patch)
2020-02-12 09:48 PST, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-02-11 16:56:42 PST
Radar WebKit Bug Importer
Comment 2 2020-02-11 19:42:18 PST
Dean Jackson
Comment 3 2020-02-12 09:38:40 PST
Comment on attachment 390469 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390469&action=review > Source/WebCore/ChangeLog:11 > + Extended http/wpt/css/css-highlight-api/highlight-text-decorations.html. What are our plans to contribute this back to WPT? > Source/WebCore/rendering/TextDecorationPainter.cpp:377 > + Color result = style.visitedDependentColorWithColorFilter(CSSPropertyTextDecorationColor); auto?
Simon Fraser (smfr)
Comment 4 2020-02-12 09:40:06 PST
Comment on attachment 390469 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=390469&action=review > LayoutTests/http/wpt/css/css-highlight-api/highlight-text-decorations-expected.html:10 > + text-decoration: underline; > + text-decoration-color: red; Bad indentation or tabs.
Megan Gardner
Comment 5 2020-02-12 09:46:59 PST
Dean, we plan on pushing them back at some point in time, but probably not until we fix the issues that require the obscurers.
Megan Gardner
Comment 6 2020-02-12 09:48:54 PST
Created attachment 390530 [details] Patch for landing
WebKit Commit Bot
Comment 7 2020-02-12 10:40:28 PST
Comment on attachment 390530 [details] Patch for landing Clearing flags on attachment: 390530 Committed r256451: <https://trac.webkit.org/changeset/256451>
WebKit Commit Bot
Comment 8 2020-02-12 10:40:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.