Fix highlight text decorations to work with all decoration types and colors https://bugs.webkit.org/show_bug.cgi?id=207601

Reviewed by Dean Jackson.

Source/WebCore:

MarkedText styles were incorrectly setting styles, and colors were being
calculated incorrectly.

Extended http/wpt/css/css-highlight-api/highlight-text-decorations.html.

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::resolveStyleForMarkedText):
Correctly pass information about text decorations to MarkedTexts styles.

* rendering/TextDecorationPainter.cpp:
(WebCore::collectStylesForRenderer):
(WebCore::TextDecorationPainter::decorationColor):
(WebCore::decorationColor): Deleted.
Expose decorationColor calculator for use in InlineTextBox.
* rendering/TextDecorationPainter.h:

LayoutTests:

* http/wpt/css/css-highlight-api/highlight-text-decorations-expected.html:
* http/wpt/css/css-highlight-api/highlight-text-decorations.html:


Canonical link: https://commits.webkit.org/220610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256451 268f45cc-cd09-0410-ab3c-d52691b4dbfc